test/good/1.cc
int main()
{
    int x, y, z;
    x = 4;
    y = 5;
    z = 6;
    return 0;
}